@@ -1,3 +1,15 @@
+2020-12-11  Miguel Gomez  <magomez@igalia.com>
+
+        REGRESSION(r268923): [WPE] Nothing renders on the rpi3 using the proprietary video driver
+        https://bugs.webkit.org/show_bug.cgi?id=219739
+
+        Reviewed by Carlos Garcia Campos.
+
+        Rewrite the GLSL code to perform rounded rectangle clipping so it works with the limitations
+        of the raspberrypi3 proprietary video driver.
+
+        * platform/graphics/texmap/TextureMapperShaderProgram.cpp:
+
 2020-12-11  Fujii Hironori  <Hironori.Fujii@sony.com>
 
         [TextureMapper] REGRESION(r269570): mask layer doesn't clip descendent layers
